# renag-quality-check

./: .gitlab-ci.yml.off  LICENSE  README.md  extractors.py  requirements-dev.txt  requirements.txt  xtr2database.py
backend/: docker-compose.yml
database/: README.md  create_indexes.sql  drop_indexes.sql  inserts.sql  schema.sql
docker/: .gitignore  README.md  docker-compose.yml  init_postgres.sql
docs/: README.md
evo-skyplot/: .gitignore  README.md  evo_skyplot.py  pyproject.toml  requirements.txt
grafana/: Data integrity large network.json  Data integrity.json  Quality check-1686923064409.json  Quality check.json  README.md  Skyplots.json
xtr2database/: .gitignore  README.md  Run.ps1  database.py  extractors.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  xtr2database.py
xtr2database/metrics/: sig2noise.py
xtr2database/tests/: test_extractors.py
xtr2database/xtr2database/: __init__.py  __main__.py  database.py  extractors.py  file_status.py  xtr_import.py
xtr2database/xtr2database/metrics/: __init__.py  common.py  cycle_slip.py  sig2noise.py  skyplot.py
